--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <script type="text/javascript" src="src/js/love.js"></script>
     <script type="text/javascript" src="src/js/switch.js"></script>
     <script type="text/javascript" src="src/js/memo.js"></script>
+    <!-- test -->
 
 
 
