--- a/detail.html
+++ b/detail.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-
+    <button id="home">HOME</button>
+    <div id="container">
+        <div id="card">
+            <img id="img"></img>
+            <p id="title"></p>
+            <p id="rate"></p>
+        </div>
+        <div id="overview"></div>
+        <div id="review"></div>
+    </div>
 </body>
 
 </html>
