--- a/detail.html
+++ b/detail.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="css/detail.css" type="text/css">
+    <script type="module" src="./src/detail.js"></script>
+  </head>
 
-<body>
+  <body>
+    <form id="reviewform" onsubmit="return false">
 
-</body>
+        <input type="text" id="review" class = "review" placeholder="리뷰를 작성해주세요"/>
+        <div>
+          <input type="text" id="name" placeholder="아이디를 적어주세요"/>
 
+
+          <input type="text" id="password" placeholder ="비밀번호를 입력해주세요"/>
+
+
+          <button id="save">작성하기</button>
+        </div>
+      </form>
+      <div class ="reviewbox" id="reviewbox">
+        리뷰
+      </div>
+  </body>
 </html>
+
+아니용
