--- a/detail.html
+++ b/detail.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/detail.css" id="cssline" />
-    <script src="src/detail.js" type="module"></script>
+    <script src="src/dayoung.js" type="module"></script>
     <title>Document</title>
 </head>
 
@@ -22,7 +22,10 @@
             <p id="rate"></p>
         </div>
         <div id="overview"></div>
-        <div id="review"></div>
+        <div id="review">
+
+
+        </div>
     </div>
 </body>
 
