--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,26 @@
         </div>
 
         <div id="overview"></div>
-        <div id="review">
+        <div id="reviewbox">
+            <div id="review"></div>
+            <div class="commentviewbox">
+                <p id="latestreview">Latest Review</p>
+                <p id="top">Review</p>
+                <p class="content" id="reviewcontent1">
+                <p>
+                <p id="id">ID</p>
+                <p class="content" id="writter1"> </p>
+                <p id="top">Review</p>
+                <p class="content" id="reviewcontent2">
+                <p>
+                <p id="id">ID</p>
+                <p class="content" id="writter2"> </p>
+                <p id="top">Review</p>
+                <p class="content" id="reviewcontent3">
+                <p>
+                <p id="id">ID</p>
+                <p class="content" id="writter3"> </p>
+            </div>
         </div>
     </div>
 </body>
