--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/detail.css" id="cssline" />
     <script src="src/detail.js" type="module"></script>
-    <title>Document</title>
+    <title id = "title">Document</title>
 </head>
 
 <body>
@@ -21,12 +21,10 @@
             <p id="title"></p>
             <p id="rate"></p>
         </div>
-
         <div id="overview"></div>
         <div id="reviewbox">
             <div id="review"></div>
             <div id="comment"></div>
-
         </div>
     </div>
 </body>
