--- a/index.html
+++ b/index.html
@@ -3,53 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" type="text/css" href="css/index.css" id="cssline" />
 
-
     <title>최신 영화 검색 | node.js A-8 이다영</title>
-
 
     <script src="src/index.js" type="module"></script>
 </head>
 
-
-
 <body>
 
     <header class="header">
-
-
         <h1 class="home" id="home">Moviechart</h1>
-
         <div class="searchbox">
-
             <input type="search" id="search" placeholder="search by title" autocomplete="off" autofocus>
-            <button title="대소문자 모두 검색이 가능합니다. 검색어를 포함하고 있는 제목을 가진 모든 영화를 표시합니다. " id="searchbtn"
-                type="button">Search</button>
-
-
+            <button title="대소문자 모두 검색이 가능합니다. 검색어를 포함하고 있는 제목을 가진 모든 영화를 표시합니다. " id="searchbtn" type="button">Search</button>
         </div>
-        <button title="all chart에서 하트를 누르면 my chart에 저장됩니다." id="allchart" type="button">all
-            chart</button>
-        <button title="하트를 누른 카드만 loved chart에 담습니다. 하트의 숫자가 많을수록 loved chart의 순위가 높아집니다." id="mychart"
-            type="button">loved chart</button>
-
-
+        <button title="all chart에서 하트를 누르면 my chart에 저장됩니다." id="allchart" type="button">allchart</button>
+        <button title="하트를 누른 카드만 loved chart에 담습니다. 하트의 숫자가 많을수록 loved chart의 순위가 높아집니다." id="mychart" type="button">loved chart</button>
         <button title="모바일과 데스크탑 버튼을 준비하였으니 기기 별로 편안하게 즐겨 주세요." id="mobilebtn" type="button">mobile</button>
-
-
         <button title="모바일과 데스크탑 버튼을 준비하였으니 기기 별로 편안하게 즐겨 주세요." id="desktopbtn" type="button">desktop</button>
-
-
-
     </header>
-
     <div class="cards" id="cards"></div>
-
 </body>
 
 </html>
