--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="homebox">
-        <button onclick="clickhome(); id="home">HOME</button>
+        <button id="home">HOME</button>
     </div>
     </div>
     <div id="container">
