--- a/detail.html
+++ b/detail.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/detail.css" id="cssline" />
     <script src="src/detail.js" type="module"></script>
-    <title id = "title">Document</title>
+    <title id="title">Document</title>
 </head>
 
 <body>
     <div id="homebox">
+        <button id="previous">PREVIOUS</button>
         <button id="home">HOME</button>
+        <button id="next">NEXT</button>
     </div>
     </div>
     <div id="container">
