--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/index.css" id="cssline" />
 
-    <title>최신 영화 검색 | node.js A-8 이다영</title>
+    <title>최신 영화 검색 | zbase : Moviechart </title>
 
     <script src="src/index.js" type="module"></script>
 </head>
