--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,9 @@
 
 <body>
     <div id="homebox">
+        <button id="prev">PREV</button>
         <button id="home">HOME</button>
+        <button id="next">NEXT</button>
     </div>
     </div>
     <div id="container">
