mobile desktop switch added

--- a/detail.html
+++ b/detail.html
@@ -12,9 +12,15 @@
 
 <body>
     <div id="homebox">
-        <button id="prev">PREV</button>
-        <button id="home">HOME</button>
-        <button id="next">NEXT</button>
+        <div>
+            <button id="prev">PREV</button>
+            <button id="home">HOME</button>
+            <button id="next">NEXT</button>
+        </div>
+        <div id="detailbuttons">
+            <button title="모바일과 데스크탑 버튼을 준비하였으니 기기 별로 편안하게 즐겨 주세요." id="detailmobilebtn" type="button">mobile</button>
+            <button title="모바일과 데스크탑 버튼을 준비하였으니 기기 별로 편안하게 즐겨 주세요." id="detaildesktopbtn" type="button">desktop</button>
+        </div>
     </div>
     </div>
     <div id="container">
